package src.main.java.Characters.Enemies;

public class Stalker extends Enemies {
    public void stalkerView() {
    }
}
