package src.main.java.Characters.Players;

public class EngineerMarcus extends Players {
    public void skillEmergensFix() {
    }
}
