package src.main.java.Characters.Players;

public class JaxKane extends Players {
    public void skillDevastatingAttack() {
    }
}
