package src.main.java.Characters.Players;

public class ZaraQuinn extends Players {
    public void skillRemoveEnemies() { }
}
