package Domain.Entity.Characters.Enemies;

public class IACore extends Enemies {
    public void hackingIaCore() {
    }
}
