package Domain.Entity.Elements;

// Clase Elements 
public class Elements { 
    protected String nameElement;
    protected String typeElement;
    protected String textureElement; // Simulando Texture como String
    protected String animatedTexture; // Simulando Animation como String
    protected int dimensionX;
    protected int dimensionY;


    public void effect(){};

}
